--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../bower_components/perfect-scrollbar/css/perfect-scrollbar.css" />
     <link rel="stylesheet" href="../bower_components/ng-table/dist/ng-table.min.css" />
     <link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="../bower_components/angular-ui-tree/dist/angular-ui-tree.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.min.css" />
@@ -56,6 +57,7 @@
     <script src="../bower_components/ng-table/dist/ng-table.min.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
+    <script src="../bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <!-- endbower -->
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.min.js"></script>
@@ -99,6 +101,11 @@
 
 
     <script src="scripts/common/factories.js"></script>
+
+    <script src="scripts/controllers/site/pagesCtrl.js"></script>
+    <script src="scripts/controllers/site/siteSettingsCtrl.js"></script>
+    <script src="scripts/controllers/site/styleCtrl.js"></script>
+
     <script src="scripts/controllers/shopping/coupons.js"></script>
     <script src="scripts/controllers/shopping/inventory.js"></script>
     <script src="scripts/controllers/shopping/orders.js"></script>
