--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
     <script src="../bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
+    <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.min.js"></script>
@@ -101,7 +102,10 @@
 
 
     <script src="scripts/common/factories.js"></script>
+    <script src="scripts/services/fsquareService.js"></script>
 
+    <script src="scripts/controllers/site/sitesCtrl.js"></script>
+    <script src="scripts/controllers/user/userCtrl.js"></script>
     <script src="scripts/controllers/site/pagesCtrl.js"></script>
     <script src="scripts/controllers/site/siteSettingsCtrl.js"></script>
     <script src="scripts/controllers/site/styleCtrl.js"></script>
